# axiomterm

./: Cargo.toml  GEMINI.md  README.jp.md  README.md  config.lua  full_config.lua  terminal.toml.example  test_config.lua
docs/: architecture.md  config_guide.md  differential_rendering.md  lua_api.md  setup_guide.md  undo_architecture.md
src/: app.rs  backend.rs  config.rs  fixed_config.rs  input.rs  lua_bridge.rs  main.rs  renderer.rs  shell.rs  types.rs  utils.rs
