[package]
name = "axiomterm"
version = "0.1.0"
edition = "2024"

[dependencies]
full_moon = "2.1.0"
eframe = "0.29"
crossbeam-channel = "0.5"
dirs = "6.0"
filetime = "0.2"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
notify = "8.2.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "send"] }
